--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 h1 {
     background-color: aquamarine;
 }
+
+h5 {
+    color: blue;
+    background-color: blanchedalmond;
+    text-align: center;
+}
